Create controllers and finish all services, start the setup for Spring Security